.provarCaches/00D5f000005vwGkEAI/objects/rstk__socctxn__c.object
<CustomObject>
    <description>socctxn__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>This is an internal system field used to define the external ID of a record, which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>rstk__socctxn_acct__r.rstk__syacc_mfgacct__c + &apos; &apos; +  rstk__socctxn_custno__r.rstk__socust_custno__c + &apos; &apos; +  rstk__socctxn_div__r.rstk__sydiv_div__c + &apos; &apos; +  rstk__socctxn_invoice__r.rstk__formula_invoice__c + &apos; &apos; +  rstk__socctxn_order__r.rstk__sohdr_order__c + &apos; &apos; +  rstk__soinvsched_salesacct__r.rstk__syacc_mfgacct__c</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record, which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__socctxn_acct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the Credit Account of this Credit Card transaction</inlineHelpText>
        <label>Credit Account</label>
        <referenceTo>rstk__syacc__c</referenceTo>
        <relationshipName>syacc_acct_socctxn</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__socctxn_amount__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Amount of this Credit Card transaction</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socctxn_ccbatchno__c</fullName>
        <inlineHelpText>This is the Batch number associated with this Credit Card transaction</inlineHelpText>
        <label>Batch Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socctxn_ccinfo__c</fullName>
        <inlineHelpText>This is the Credit Card information</inlineHelpText>
        <label>Credit Card Info</label>
        <length>172</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>rstk__socctxn_cctxnid__c</fullName>
        <inlineHelpText>This is the Credit Card transaction identification</inlineHelpText>
        <label>Credit Card Txn Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__socctxn_custno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the Customer associated with this Credit Card transaction</inlineHelpText>
        <label>Customer</label>
        <referenceTo>rstk__socust__c</referenceTo>
        <relationshipName>socust_custno_socctxn</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__socctxn_date__c</fullName>
        <inlineHelpText>This is the Transaction Date for this Credit Card transaction</inlineHelpText>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__socctxn_datetransfer__c</fullName>
        <inlineHelpText>This is the Date that this CC transaction was transferred to FF</inlineHelpText>
        <label>Date Transferred</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__socctxn_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the Division associated with this Credit Card Transaction</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipName>sydiv_div_socctxn</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__socctxn_invoice__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the Invoice Number associated with this CC Transaction</inlineHelpText>
        <label>Invoice Number</label>
        <referenceTo>rstk__soinv__c</referenceTo>
        <relationshipName>soinv_invoice_socctxn</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__socctxn_order__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the Sales Order Number associated with this CC Transaction</inlineHelpText>
        <label>Sales Order Number</label>
        <referenceTo>rstk__sohdr__c</referenceTo>
        <relationshipName>sohdr_order_socctxn</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__socctxn_period__c</fullName>
        <inlineHelpText>This is the Sales Period for this CC transaction</inlineHelpText>
        <label>Sales Period</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socctxn_reconciled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This indicates that this CC transaction has be reconciled</inlineHelpText>
        <label>Reconciled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__socctxn_seq__c</fullName>
        <inlineHelpText>This is the Sequence number for this CC transaction</inlineHelpText>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socctxn_transferred__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This indicates whether or not this CC Transaction has been transferred to FF</inlineHelpText>
        <label>Transferred</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__socctxn_year__c</fullName>
        <inlineHelpText>This is the Sales Year for this CC Transaction</inlineHelpText>
        <label>Sales year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soinvsched_amount__c</fullName>
        <inlineHelpText>This is the Amount of this Credit Card transaction</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soinvsched_duedate__c</fullName>
        <inlineHelpText>This is the Due Date for this CC transaction</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__soinvsched_payseq__c</fullName>
        <inlineHelpText>This is the Payment number for this CC transaction</inlineHelpText>
        <label>Payment Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soinvsched_salesacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the Sales Account associated with this CC transaction</inlineHelpText>
        <label>Sales Account</label>
        <referenceTo>rstk__syacc__c</referenceTo>
        <relationshipName>syacc_salesacct_soinvsched2</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Z_OBSOLETE</label>
    <nameField>
        <label>Credit Card Transaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Z_OBSOLETE</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>